# JsonFileBased_RobotDecision

./: .gitignore  README.md
src/fake_msg_publisher/: package.xml  setup.cfg  setup.py
src/fake_msg_publisher/fake_msg_publisher/: fake_msg_publisher_node.py
src/global_interface/: CMakeLists.txt  package.xml
src/global_interface/msg/: Autoaim.msg  Decision.msg  Serial.msg
src/robot_decision/: CMakeLists.txt  package.xml
src/robot_decision/JsonFile/: config.json  decisions.json  decisions111.json  waypoints.json  waypoints_0.json  waypoints_1.json
src/robot_decision/include/: robot_decision_node.hpp
src/robot_decision/include/robot_decision/: RobotDecision.h  configs.h  public.h  structs.h
src/robot_decision/launch/: decision_node_launch.py
src/robot_decision/sample/: decisions.json  waypoints.json
src/robot_decision/src/: robot_decision_node.cpp
src/robot_decision/src/Json/: jsoncpp.cpp
src/robot_decision/src/robot_decision/: RobotDecision.cpp
src/robot_interface/: CMakeLists.txt  package.xml
src/robot_interface/msg/: Decision.msg  Detection.msg  GameInfo.msg
tools/python/: getlocation.py
