<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_decision</name>
  <version>0.0.0</version>
  <description>THE FUCTION FOR ROBOT DECISION</description>
  <maintainer email="iratecat1@outlook.com">ninefish</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>global_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>message_filters</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
